<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDark"
    tools:context="com.example.puzzle.activity.MainPageActivity">

    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp">

            <ImageView
                android:layout_width="230dp"
                android:layout_height="210dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/activity_main_page_game_start"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/button_blue_25"
                android:text="@string/game_start"
                android:textColor="@color/blue"
                android:textSize="18sp" />

            <Button
                android:id="@+id/activity_main_page_rank"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/button_orange_25"
                android:text="@string/rank"
                android:textColor="@color/orange"
                android:textSize="18sp" />

            <Button
                android:id="@+id/activity_main_page_personal"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:background="@drawable/button_purple_25"
                android:text="@string/personal"
                android:textColor="@color/purple"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>

