<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDark"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/error_message_layout"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@color/red"
        android:visibility="gone">

        <ImageView
            android:id="@+id/close_button"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:src="@drawable/close" />

        <TextView
            android:id="@+id/error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tool:text="用户名已存在" />
    </LinearLayout>

    <com.example.puzzle.widget.KeyboardLayout
        android:id="@+id/keyboard_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/activity_login_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <LinearLayout
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="40dp">

                        <ImageView
                            android:layout_width="230dp"
                            android:layout_height="210dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/logo" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="@string/username" />

                        <EditText
                            android:id="@+id/activity_login_username"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/input_background"
                            android:padding="3dp"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="40dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="@string/password" />

                        <EditText
                            android:id="@+id/activity_login_password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/input_background"
                            android:inputType="textPassword"
                            android:padding="3dp"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="47dp">

                        <Button
                            android:id="@+id/activity_login_login_button"
                            android:layout_width="90dp"
                            android:layout_height="40dp"
                            android:layout_alignParentStart="true"
                            android:background="@drawable/button_blue_20"
                            android:text="@string/login"
                            android:textColor="@color/blue"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/activity_login_register_button"
                            android:layout_width="90dp"
                            android:layout_height="40dp"
                            android:layout_alignParentEnd="true"
                            android:background="@drawable/button_orange_20"
                            android:text="@string/register"
                            android:textColor="@color/orange"
                            android:textSize="18sp" />
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </com.example.puzzle.widget.KeyboardLayout>
</LinearLayout>
