<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDark"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingTop="15dp"
    tools:context="com.example.puzzle.activity.GameStartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <ImageButton
            android:id="@+id/activity_game_start_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/backgroundDark"
            android:padding="6dp"
            android:scaleType="fitCenter"
            android:src="@drawable/back" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/bottom_shadow_background"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/choose_style"
            android:textColor="@color/fontColorBlack"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/activity_game_start_choose_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activity_game_start_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="3dp"
                android:paddingStart="3dp"
                android:text="@string/initial_difficulty"
                android:textColor="@color/fontColorBlack"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/greenLight" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bottom_shadow_background"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_picture"
                android:textColor="@color/fontColorBlack"
                android:textSize="20sp" />
        </LinearLayout>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="306dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="7dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="7dp"
                        android:padding="3dp">

                        <ImageView
                            android:id="@+id/activity_game_start_picture1"
                            android:layout_width="140dp"
                            android:layout_height="140dp"
                            android:scaleType="fitCenter" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp">

                        <ImageView
                            android:id="@+id/activity_game_start_picture2"
                            android:layout_width="140dp"
                            android:layout_height="140dp"
                            android:scaleType="fitCenter" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="7dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="7dp"
                        android:padding="3dp">

                        <ImageView
                            android:id="@+id/activity_game_start_picture3"
                            android:layout_width="140dp"
                            android:layout_height="140dp"
                            android:scaleType="fitCenter" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp">

                        <ImageView
                            android:id="@+id/activity_game_start_picture4"
                            android:layout_width="140dp"
                            android:layout_height="140dp"
                            android:scaleType="fitCenter" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="7dp"
                        android:padding="3dp">

                        <ImageView
                            android:id="@+id/activity_game_start_picture5"
                            android:layout_width="140dp"
                            android:layout_height="140dp"
                            android:scaleType="fitCenter" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp">

                        <LinearLayout
                            android:id="@+id/activity_game_start_choose_from_album"
                            android:layout_width="140dp"
                            android:layout_height="140dp"
                            android:background="@color/greenLight"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/picture" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/choose_from_album"
                                android:textColor="@android:color/white" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/activity_game_start_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_blue_background"
            android:text="@string/start_puzzle"
            android:textColor="@color/fontColorBlack" />
    </LinearLayout>
</LinearLayout>

